
Alpha 0.9
- Caught CTRL+C & CTRL+Z signal for return to enable menu

Alpha 0.10
- Use DHClient only when interface is up
- Save Interface configuration in system when command save is done
- Implement function to calculate str netmask by cidr
- Bugfix on Interface <name> -> Description command
- Implement Interface -> no description command
- Refuse Proto on firewall when not TCP,UDP,ICMP (need more support for generic protos later)

Alpha 0.11
- Implement writing pf.conf rules with reloading
- Due to this, remove editPacketFilter command
- Reload packet filter only if it's enabled
- Implement configuration for firewall state. Disable is written, Enable by default
- Fix malloc warnings on compilation
- Fix strcmp, strcat warnings on compilation
- Implement show firewall stats to get stats from PacketFilter

Alpha 0.12
- Added quick keyword for packetFilter to go out of rules tables when match.
- Added fingerprinting for startup-config and running-config in md5, sha1 and sha256
- Implement no hostname <name>
- Added fingerprinting for pf.conf in md5, sha1 and sha256
- PacketFilter configuration is now written into pf.conf.run and copied into pf.conf when saving firewall
- Save sysctl for mcastrouting and ip routing with fingerprinting

Alpha 0.13
- Some little cleanup
- Create daemon and client sources. Split files between the two things
- Added callback for commands
- Bugfix for send command
- Proper flush for stdout before printing the prompt

Alpha 0.14
- Implement no ip route
- Bug fix for adding routes
- Now reading startup config on daemon start, not running-config
- Write hostname in system file /etc/myname
- Implement ip name-server to set the main ns for the router
- Implement no access-list <name> with proper memory handling
- Proper memory handling for no ip route

Alpha 0.15
- Check integrity of the configuration files
- Move execSystemCommand to sysunix.h
- Little improvement to reset prompt color
- Refund the prints when the daemon starts